fixed genres check box alignment on both sides and added all css to filter button

--- a/main.css
+++ b/main.css
@@ -41,12 +41,19 @@ float: left;
   border: ;
   margin: px px
   width: px;
+  padding-top: 5px;
 }
 
 .genres-right{
   float: right;
 
   margin: 5px;
+}
+
+.filter {
+  padding-top: 20px;
+  padding-left: 60px;
+  display: inline-block;
 
 }
 
@@ -59,5 +66,15 @@ article {
   display: inline;
   border-style: solid;
   background-color: #FEFAC0
+}
+
+button {
+  padding-left: 30px;
+  padding-right: 30px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 7px;
+font-size: 25px;
+
 }
 
